core/unpackaged/main/default/objects/ContentVersion/ContentVersion.object-meta.xml
<CustomObject>
</CustomObject>