core/unpackaged/main/default/objects/ContentVersion/fields/Filtered_Email_Image_Hash__c.field-meta.xml
<CustomField>
    <fullName>Filtered_Email_Image_Hash__c</fullName>
    <label>Filtered Email Image Hash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>