core/unpackaged/main/default/objects/ContentVersion/fields/Filtered_Email_RecordId__c.field-meta.xml
<CustomField>
    <fullName>Filtered_Email_RecordId__c</fullName>
    <label>Filtered Email RecordId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>