core/unpackaged/main/default/objects/ContentVersion/fields/Is_Filtered_Email_Image__c.field-meta.xml
<CustomField>
    <fullName>Is_Filtered_Email_Image__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Filtered Email Image</label>
    <type>Checkbox</type>
</CustomField>