core/unpackaged/main/default/objects/ContentVersion/fields/WebDocs_File_Name__c.field-meta.xml
<CustomField>
    <fullName>WebDocs_File_Name__c</fullName>
    <description>Stores the selected WebDocs document type used for syncing this file.</description>
    <inlineHelpText>Selected WebDocs file name for this content version.</inlineHelpText>
    <label>WebDocs File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>