core/unpackaged/main/default/objects/ContentVersion/fields/WebDocs_Hidden__c.field-meta.xml
<CustomField>
    <fullName>WebDocs_Hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stores whether this file is hidden in the WebDocs file selector.</description>
    <inlineHelpText>Hidden in the WebDocs file selector.</inlineHelpText>
    <label>WebDocs Hidden</label>
    <type>Checkbox</type>
</CustomField>