core/unpackaged/main/default/objects/ContentVersion/fields/WebDocs_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>WebDocs_Sync_Status__c</fullName>
    <label>WebDocs Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>